--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://courier-tracke-backend:nuzm5bDCtvgt0Ocn@cluster0.lopokh6.mongodb.net/place_arena_backend?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mong
 PORT = 5000
 FRONTEND_URL = http://localhost:3000
 NODE_ENV=production
