--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-MONGODB_URI=mong
+MONGODB_URI=mongodb+srv://courier
 PORT = 5000
 FRONTEND_URL = http://localhost:3000
-NODE_ENV=production
+NODE_ENV= production
 JWT_SECRET=mynameisaliwhatisyurname
+JWT_ACCESS_SECRET=mynamesisaliwhaadftisyurname
+JWT_REFRESH_SECRET=mynameisaasdfgliwhatisyurname
